# CAOS_QLAB

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  pyproject.toml  requirements-hardware.txt  requirements-precompute.txt  requirements.txt
app/: README.md
data/: README.md
docs/: README.md  abstractions.md  architecture.md  frameworks.md  guides.md  problem-types.md  state-of-the-art.md  use-cases.md
manifests/: bernstein-vazirani__bv-0111.json  bernstein-vazirani__bv-101.json  bernstein-vazirani__bv-101101.json  bernstein-vazirani__bv-1101.json  bernstein-vazirani__bv-11010.json  bernstein-vazirani__bv-111111.json  chsh__chsh-aligned.json  chsh__chsh-optimal.json  chsh__chsh-product.json  chsh__chsh-rotated.json  chsh__chsh-suboptimal.json  chsh__chsh-weak.json  deutsch-jozsa__dj-bal-101.json  deutsch-jozsa__dj-bal-1011.json  deutsch-jozsa__dj-bal-parity.json  deutsch-jozsa__dj-const0-3.json  deutsch-jozsa__dj-const0-4.json  deutsch-jozsa__dj-const1-3.json  grover__grover-2-3.json  grover__grover-3-2.json  grover__grover-3-2marked.json  grover__grover-3-5.json  grover__grover-4-0.json  grover__grover-4-10.json  interference__itf-0.json  interference__itf-2pi3.json  interference__itf-3pi4.json  interference__itf-pi.json  interference__itf-pi2.json  interference__itf-pi4.json  maxcut__bowtie.json  maxcut__pentagon.json  maxcut__petersen-ish.json  maxcut__square-diag.json  maxcut__square.json  maxcut__triangle.json  noise__noise-p0.01-d1.json  noise__noise-p0.01-d3.json  noise__noise-p0.02-d1.json  noise__noise-p0.03-d3.json  (+79 more)
(+248 files in other folders)
